After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 752174 - JNI: jaw_table_cell_get_position is missing
JNI: jaw_table_cell_get_position is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
0.33.x
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-07-09 14:20 UTC by Magdalen Berns (irc magpie)
Modified: 2015-07-09 14:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Wrapper: Create getPosition for AtkTableCel (1.16 KB, patch)
2015-07-09 14:26 UTC, Magdalen Berns (irc magpie)
committed Details | Review
JNI: Create jaw_table_cell_get_position (2.24 KB, patch)
2015-07-09 14:30 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Update HACKING (603 bytes, patch)
2015-07-09 14:33 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-07-09 14:20:29 UTC
This function could be created to implement atk_table_cell_get_position

https://developer.gnome.org/atk/2.16/AtkTableCell.html#atk-table-cell-get-position
Comment 1 Magdalen Berns (irc magpie) 2015-07-09 14:26:07 UTC
Created attachment 307145 [details] [review]
Wrapper: Create getPosition for AtkTableCel
Comment 2 Magdalen Berns (irc magpie) 2015-07-09 14:30:22 UTC
Created attachment 307146 [details] [review]
JNI: Create jaw_table_cell_get_position
Comment 3 Magdalen Berns (irc magpie) 2015-07-09 14:33:22 UTC
Created attachment 307148 [details] [review]
Update HACKING