JNI: Create jaw_table_cell_get_position

Bug https://bugzilla.gnome.org/show_bug.cgi?id=752174